--- a/signup.html
+++ b/signup.html
@@ -1,32 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eco-Reads</title>
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/signup.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC&display=swap" rel="stylesheet">
-    <script type="module" src="signup.js"></script>
+    <script defer src="js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="js/signup.js"></script>
 </head>
+
 <body>
-    <div class="signup-wrapper">
-        <div class="signup-title-container">
-            <div class="signup-title">
-                <h1>Welcome to Eco-Reads</h1>
-            </div>
-            <div class="signup-logo">
-                <img src="images/logo.png" alt="Eco-Reads Logo">
+    <section class="h-100 h-custom gradient-custom-2">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12">
+                    <div class="d-flex justify-content-center align-items-center mb-4">
+                        <h1 class="h1 fw-bold text-center mb-0">Eco-Reads</h1>
+                        <img src="images/logo.png" alt="Eco-Reads Logo" class="img-fluid" style="width: 100px; height: auto;">
+                    </div>                    
+                    <div class="card card-registration" style="border-radius: 15px;">
+                        <div class="card-body p-0">
+                            <div class="row g-0">
+                                <!-- Personal Information Section -->
+                                <div class="col-lg-6">
+                                    <div class="p-5">
+                                        <h3 class="fw-normal mb-5  text-center" style="color: #85848e;">Personal Information</h3>
+
+                                        <div class="row">
+                                            <div class="col-md-6 mb-4 pb-2">
+                                                <div class="form-outline">
+                                                    <input type="text" id="username" class="form-control form-control-lg" />
+                                                    <label class="form-label" for="username">Username</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 mb-4 pb-2">
+                                                <div class="form-outline">
+                                                    <input type="password" id="password" class="form-control form-control-lg" />
+                                                    <label class="form-label" for="password">Password</label>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-6 mb-4 pb-2">
+                                                <div class="form-outline">
+                                                    <input type="text" id="first-name" class="form-control form-control-lg" />
+                                                    <label class="form-label" for="first-name">First Name</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 mb-4 pb-2">
+                                                <div class="form-outline">
+                                                    <input type="text" id="last-name" class="form-control form-control-lg" />
+                                                    <label class="form-label" for="last-name">Last Name</label>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-6 mb-4 pb-2">
+                                                <div class="form-outline">
+                                                    <input type="number" id="age" class="form-control form-control-lg" />
+                                                    <label class="form-label" for="age">Age</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 d-flex align-items-center">
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input" type="radio" name="gender" id="male" value="male" checked>
+                                                    <label class="form-check-label" for="male">Male</label>
+                                                </div>
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input" type="radio" name="gender" id="female" value="female">
+                                                    <label class="form-check-label" for="female">Female</label>
+                                                </div>
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input" type="radio" name="gender" id="other" value="other">
+                                                    <label class="form-check-label" for="other">Other</label>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-4 pb-2">
+                                            <div class="form-outline">
+                                                <input type="tel" id="phone-number" class="form-control form-control-lg" />
+                                                <label class="form-label" for="phone-number">Phone Number (+63)</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Contact Details Section -->
+                                <div class="col-lg-6 bg-indigo text-white">
+                                    <div class="p-5">
+                                        <h3 class="fw-normal mb-5 text-center" >Address</h3>
+
+                                        <div class="mb-4 pb-2">
+                                            <div class="form-outline form-white">
+                                                <input type="text" id="street" class="form-control form-control-lg" />
+                                                <label class="form-label" for="street">Street</label>
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-4 pb-2">
+                                            <div class="form-outline form-white">
+                                                <input type="text" id="barangay" class="form-control form-control-lg" />
+                                                <label class="form-label" for="barangay">Barangay</label>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-5 mb-4 pb-2">
+                                                <div class="form-outline form-white">
+                                                    <input type="text" id="zip-code" class="form-control form-control-lg" />
+                                                    <label class="form-label" for="zip-code">Zip Code</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-7 mb-4 pb-2">
+                                                <div class="form-outline form-white">
+                                                    <input type="text" id="city" class="form-control form-control-lg" />
+                                                    <label class="form-label" for="city">Municipality/City</label>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-4">
+                                            <div class="form-outline form-white">
+                                                <input type="text" id="province" class="form-control form-control-lg" />
+                                                <label class="form-label" for="province">Province</label>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-check d-flex justify-content-start mb-4 pb-3">
+                                            <input class="form-check-input me-3" type="checkbox" value="" id="terms" />
+                                            <label class="form-check-label text-white" for="terms">
+                                                I accept the <a href="#!" class="text-white"><u>Terms and Conditions</u></a>.
+                                            </label>
+                                        </div>
+
+                                        <button type="submit" class="btn btn-light btn-lg">Register</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="signup-form">
-            <form>
-                <input type="email" placeholder="Email" id="email" required>
-                <input type="password" placeholder="Password" id="password" required>
-                <button id="submit" type="submit">Sign Up</button>
-            </form>
-        </div>
-    </div>
+    </section>
 </body>
+
 </html>
