--- a/landingpage.html
+++ b/landingpage.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC&display=swap" rel="stylesheet">
+    <script type="module" src="js/landingpage.js"></script>
+    <script defer src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <header>
@@ -18,13 +21,13 @@
     </div>
     <div class="landingpage-container">
         <div class="gridbox item-2">
-            <a href="">
+            <a id="buyer-link">
                 <img src="images/cart.svg" alt="cart" style="width: 150px;">
                 <h1>Buyer</h1>
             </a>
         </div>
         <div class="gridbox item-3">
-            <a href="">
+            <a id="seller-link">
                 <img src="images/user.svg" alt="cart" style="width: 120px;">
                 <h1>Seller</h1>
             </a>
