--- a/buyerhome.html
+++ b/buyerhome.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC&display=swap" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/home.css" rel="stylesheet" />
+    <link href="css/buyerhome.css" rel="stylesheet" />
     <script defer src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/home.js"></script>
+    <script src="js/buyerhome.js"></script>
 </head>
 <body>
 <!-- Responsive navbar -->
