--- a/buyerhome.html
+++ b/buyerhome.html
@@ -36,7 +36,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="images/profileicon.svg" alt="profileicon" style="width: 30px; height: 35px; object-fit: contain; border-radius: 50%">
+                        <img src="images/profileicon.svg" alt="profileicon" style="width: 30px; height: 35px; object-fit: cover; border-radius: 50%">
                     </a>                    
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                         <li><a class="dropdown-item" href="manage-account.html">Manage Account</a></li>
@@ -49,7 +49,6 @@
         </div>
     </div>
 </nav>
-
 
     <!-- Page Content -->
     <div class="container px-4 px-lg-5 mt-5">
@@ -123,6 +122,38 @@
                 </div>
             </div>
         </div>
+        <!-- Sub Nav -->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary mb-4">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <a class="navbar-brand" href="#">I'm Feeling Lucky!</a>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Favorites</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Genre
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success custom-hover-btn" type="submit">Search</button>
+                </form>                                            
+              </div>
+            </div>
+          </nav>
+        
 
 
 </body>
