added a selling form and fixed the dashboard for users

--- a/signup.html
+++ b/signup.html
@@ -13,23 +13,7 @@
     <script type="module" src="js/signup.js"></script>
     <script defer src="js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <style>
-        .profile-preview {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin-bottom: 20px;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        .form-section {
-            margin-bottom: 20px;
-        }
-    </style>
 </head>
-
 <body>
     <section class="h-100 h-custom gradient-custom-2">
         <div class="container py-5 h-100">
@@ -168,6 +152,7 @@
                                         </div>
 
                                         <button type="submit" class="btn btn-light btn-lg">Register</button>
+                                        <button type="button" id="goBackButton" class="btn btn-light btn-lg">Go Back</button>
                                     </div>
                                 </div>
                             </div>
