--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC&display=swap" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/buyerhome.css" rel="stylesheet" />
+    <link href="css/userhome.css" rel="stylesheet" />
     <script defer src="js/bootstrap.bundle.min.js"></script>
     <script type="module" src="js/index.js"></script>
 </head>
@@ -16,7 +16,7 @@
 <!-- Responsive navbar -->
 <nav class="navbar navbar-expand-lg">
     <div class="container px-5">
-        <a class="navbar-brand fs-2 text-muted d-flex align-items-center" href="buyerhome.html">
+        <a class="navbar-brand fs-2 text-muted d-flex align-items-center" href="index.html">
             Eco-Reads
             <img src="images/logo.png" alt="Eco-Reads Logo" class="ms-2" style="width: 50px; height: auto;">
         </a>
@@ -26,16 +26,25 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex align-items-center">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#!">Booksfeed</a>
+                    <a class="nav-link active" aria-current="page" href="#!">Booksfeed</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Genre
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Romance</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Horror</a></li>
+                    </ul>
+                  </li>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                </form> 
                 <li class="nav-item">
-                    <a class="nav-link" href="#!">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#!">Messages</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="login.html">Sign In</a>
+                    <button class="btn btn-outline-success custom-hover-btn" type="submit" id="signinbutton">Sign In</button>
                 </li>             
             </ul>
         </div>
